# ddl_builder

./: .gitignore  build_model.py  docker-compose.yaml  pyproject.toml
src/ddl_builder/: __init__.py  load_yaml.py  read_files.py
