[project]
name = "ddl-builder"
version = "0.1.0"
description = "A tool to read valid yaml and create a database from the YAML."
readme = "README.md"
authors = [{ name = "Simon Goring", email = "simon.goring@ubc.ca" }]
requires-python = ">=3.12"
dependencies = [
    "pathlib>=1.0.1",
    "pyyaml>=6.0.3",
]

[project.scripts]
ddl-builder = "ddl_builder:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
